web/themes/oc_patterns/components/_patterns/03-organisms/03-site/01-site-header/_site-header.scss
/* =================
	SITE HEADER
=================== */

.layout-container > header {
	background: $offWhite;
	& > div{
		padding: 10px 20px;
		max-width: $contentStop + 40px;
		@include auto;
		position: relative;
		@include safeFlex(row,wrap,null,center);
	}
}//end layout container


/* BRANDING BLOCK PLACEMENT
------------------- */
.block--system-branding{
	//leave room for search toogle and menu hamburger on mobile
	@include calc(width, "100% - 70px");
	position: relative;
	z-index: 10;

	//set width at desktop
	@include deskMenu{
		width: 240px;
	}

	a{
		img{
			max-width: 160px;
			margin-right: 5px;
			@include deskMenu{
				max-width: 100%;
			}
		}
	}
}//end branding block


/* SEARCH BLOCK PLACEMENT
------------------- */
.block-search-form-block{
	position: static;
	display: inline-block;
	text-align: right;

	//set width at desktop
	@include deskMenu{
		@include calc(width, "100% - 240px");
	}

	//search toggler
	.t-search{
		position: absolute;
		top: 17px;
		right: 20px;
		@include deskMenu{
			right: 25px;
			top: 13px;
		}
	}
}//end search block


/* MAIN NAVIGATION BLOCK
------------------------ */
.block-superfishmain{
	//desktop position
	@include deskMenu{
		position: absolute;
		right: 0;
		bottom: 0;
		width: 100%;
		padding-left: 280px;
	}//end deskMenu
	
}//end main nav


/* PATTERN LAB ONLY
------------------- */
.pl header .block-superfishmain .sf-hidden{
	display: none;
}

